
# Here are the sub-directories in which we actually want to build/run
#---------------------------------------------------------------------
# demo codes
#-----------

SUBDIRS = \
poisson \
unsteady_heat \
advection_diffusion \
navier_stokes \
axisym_navier_stokes \
solid \
beam \
shell \
linear_wave \
eigenproblems \
interaction \
meshing \
multi_physics \
linking \
optimisation \
bifurcation_tracking \
FAQ \
linear_solvers \
biharmonic \
linear_elasticity \
womersley \
reaction_diffusion 




