
# Here are the sub-directories in which we actually want to build/run
#---------------------------------------------------------------------
# demo codes
#-----------

SUBDIRS = \
poisson \
unsteady_heat \
advection_diffusion \
helmholtz \
time_harmonic_linear_elasticity \
axisym_advection_diffusion \
spherical_advection_diffusion \
steady_axisym_advection_diffusion \
navier_stokes \
axisym_navier_stokes \
polar_navier_stokes \
spherical_navier_stokes \
solid \
beam \
shell \
linear_wave \
eigenproblems \
interaction \
meshing \
multi_physics \
linking \
optimisation \
bifurcation_tracking \
FAQ \
linear_solvers \
linear_elasticity \
womersley \
biharmonic \
reaction_diffusion \
flux_transport \
young_laplace \
time_harmonic_fourier_decomposed_linear_elasticity \
fourier_decomposed_helmholtz \
foeppl_von_karman \
generalised_helmholtz \
axisym_linear_elasticity
if WANT_MPI
SUBDIRS += mpi
endif


EXTRA_DIST=run_tests.bash


