SUBDIRS = \
index \
picture_show \
optimisation \
get_involved \
contact \
publications \
coding_conventions \
copyright \
intro \
FAQ \
ToDo \
meshes \
tar_files \
download \
the_distribution \
example_code_list \
the_data_structure \
quick_guide \
poisson \
unsteady_heat \
linear_wave \
helmholtz \
navier_stokes \
axisym_navier_stokes \
advection_diffusion \
beam \
shell \
solid \
interaction \
multi_physics \
eigenproblems \
leftovers \
order_of_action_functions \
hijacking \
change_log \
bugs \
linear_solvers \
subversion \
paraview \
preconditioners \
to_be_written \
young_laplace \
mpi \
creating_doc \
linear_elasticity \
time_harmonic_fourier_decomposed_linear_elasticity \
fourier_decomposed_helmholtz \
c1_element \
time_harmonic_linear_elasticity \
generalised_fourier_decomposed_helmholtz \
generalised_helmholtz \
axisym_linear_elasticity \
acoustic_fsi \
fourier_decomposed_acoustic_fsi \
generalised_time_harmonic_linear_elasticity \
deliberately_broken_doc_for_checking

include $(top_srcdir)/config/makefile_templates/doc

docfile = doc

EXTRA_DIST += oomph-lib_header.html.template oomph_header.css navbar_toggle.js

